@@ -1,7 +1,9 @@
 package com.nhnacademy.bookapi.service.category;
 
 import com.nhnacademy.bookapi.dto.category.CategoryDTO;
+import com.nhnacademy.bookapi.entity.BookCategory;
 import com.nhnacademy.bookapi.entity.Category;
+import com.nhnacademy.bookapi.repository.BookCategoryRepository;
 import com.nhnacademy.bookapi.repository.CategoryRepository;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -11,18 +13,38 @@ import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
-public class CategoryServiceImpl {
+public class CategoryServiceImpl implements CategoryService {
 
     private final CategoryRepository categoryRepository;
+    private final BookCategoryRepository bookCategoryRepository;
 
-    @Transactional(readOnly = true)
     public List<CategoryDTO> updateCategoryList(Long bookId){
         return categoryRepository.findByBookId(bookId).stream()
             .map(category -> new CategoryDTO(
                 category.getId(),
                 category.getName(),
-                category.getParent() != null ? category.getParent().getId() : null
-            ))
-            .collect(Collectors.toList());
+                category.getLevel() >= 0 ? category.getLevel() : null
+            )).toList();
+    }
+
+    @Override
+    public Category getCategoryById(Long categoryId) {
+        return categoryRepository.findById(categoryId).orElse(null);
+    }
+
+    @Override
+    public void categorySave(Category category, BookCategory bookCategory) {
+        categoryRepository.save(category);
+        bookCategoryRepository.save(bookCategory);
+    }
+
+    @Override
+    public Category getCategoryByName(String categoryName) {
+        return categoryRepository.findCategoryByName(categoryName);
+    }
+
+    @Override
+    public void bookCategorySave(BookCategory bookCategory) {
+        bookCategoryRepository.save(bookCategory);
     }
 }
